--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-thumbnail (click)="home()" slot="start">
+    <ion-thumbnail class="potato-logo" (click)="home()" slot="start">
       <img src="assets/logo.png" alt="">
     </ion-thumbnail>
+    <ion-thumbnail class="name-logo" (click)="home()" slot="start">
+      <img src="assets/name.png" alt="">
+    </ion-thumbnail>
+    
     <ion-buttons>
       <ion-button (click)="about()">Quienes somos</ion-button>
       <ion-button (click)="plans()">Planes</ion-button>
       <ion-button (click)="gift()">Regalos</ion-button>
       <ion-button (click)="eco()">Como funciona</ion-button>
     </ion-buttons>
-    <ion-icon size="large" slot="end" name="cart"></ion-icon>
+    
     <!-- <ion-divider></ion-divider> -->
     <ion-icon size="large" slot="end" name="person"></ion-icon>
+    <ion-icon size="large" slot="end" name="cart"></ion-icon>
   </ion-toolbar>
 </ion-header>
